# LibeRustOffice-Slides

./: .gitignore  Cargo.toml  README.md  TODO.md
rich_canvas/: Cargo.toml
rich_canvas/src/: lib.rs
sample_docs/: test_slides.odp  test_slides_saved.odp
src/: image_cache.rs  main.rs  odp_loader.rs  odp_saver.rs  pdf_exporter.rs  slide_screenshot.rs
